--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "cross-env IS_DEBUG=false ts-node -r tsconfig-paths/register src/index.ts",
     "dev": "cross-env IS_DEBUG=true ts-node -r tsconfig-paths/register src/index.ts",
     "build": "tsc",
-    "words": "touch wordsTriggers.json"
+    "words": "touch wordsTriggers.json",
+    "prod": "rm -rf build && cross-env IS_PROD=true npm run build && pm2 start build/src/index.js --name=ParserGram"
   },
   "author": "Dmitriy Dzyuman <telegram: @dimadzuman>",
   "license": "MIT",
